# prec

./: .gitignore  Cargo.toml  README.md
examples/: flate_compression.rs  flate_decompression.rs  tar_reader.rs  tar_writer.rs
src/: main.rs
src/reconciliation/: mod.rs  recharge.rs  surplus.rs  trade.rs  transform.rs  withdraw.rs
testdata/: file1.txt
