[package]
name = 'prec'
version = '0.1.0'
edition = '2021'
authors = ['thinkgo <thinkgo@aliyun.com>']

[dependencies]
anyhow = '1.0'
log = '0.4'
thiserror = '1.0'
tar = '0.4'
flate2 = '1.0'

[dependencies.polars]
version = '0.25'
features = ['lazy']

[dependencies.clap]
version = '4.0'
features = ['derive']
